2007-05-01  Jari Aalto  <jari aalto A T cante net>

	* copyright-update.pl (HandleFile): Variable $msg
	had wrong number of double quotes.
	(HandleFile): Missing semicolon from statement inside
	'$y eq $YEAR'.
	(wanted): $ignore pattern improved to cinlude ".#thisfile".

2006-02-19  Jari Aalto  <root A T w2kpicasso>

	* copyright-update.pl:
	(HandleCommandLineArgs): New --ignore option and variable
	$OPT_REGEXP_IGNORE
	(wanted): Check user's

2005-08-17  Jari Aalto  <jari.aalto@cante.net>

	* emacs-util.pl (UniqueRoots2): Removed. Not used.
	(Help): Added option --scan-type
	(HandleCommandLineArgs): Added $OPT_SCAN_TYPE
	(wanted): Check  $OPT_SCAN_TYPE and ignore all
	symlinks.

2005-05-19  Jari Aalto  <jari aalto A T cante dt net>

	* Makefile:  Removed version
	control Id-tag.

	* makefile.pl: Removed version
	control Id-tag. Corrected #!-line.

	* find-version.pl: Removed version
	control Id-tag. Corrected #!-line.

	* emacs-util.pl: Removed version
	control Id-tag. Corrected #!-line.
	(HELP::AUTHOR): Removed CVS conflict markers.
	(TimeDiffString): Renamed, was TimDiffString.

	* emacs-compile.pl: Removed version
	control Id-tag. Corrected #!-line.

	* emacs-1-fix.pl: Small
	changes to make the code more clean.

	* ddir.pl: Corrected #!-line. Added Main(). Small
	changes to make the code more clean.

	* copyright-update.pl (TOP OF FILE): Removed version
	control Id-tag. Corrected #!-line. Removed extra newlines
	from the code.

2005-05-08  Jari Aalto  <jari aalto A T cante dt net>

	* makefile.pl (Initialize): Added missing semicolon to $CONTACT.
	Bug reported by David Hodge <david AT hodge.id.au>. Thanks.

2005-04-17  Jari Aalto  <jari aalto A T cante dt net>

	* emacs-util.pl (UniqueRoots2): Incorrect line
	'next id $path' => 'next if $path'. Bug reported by
	 David Hodge <david AT hodge.id.au>. Thanks.

2005-02-16 Wed  Jari Aalto  <jari dot aalto A T cante dot net>

        Updated Copyright year in all files.

2005-01-27  Jari  <jari aalto A T cante dt net>